# StaticInitTest

./: CMakeLists.txt  README.md  lib1.cpp  lib1.h  lib2.h  lib2_1.cpp  lib2_2.cpp  main.cpp
